rename and attribute to original author

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     seed.loader:
-        class: 'Soyuka\SeedBundle\Core\Loader'
+        class: 'DsRestauration\SeedBundle\Core\Loader'
         arguments:
            - '%seed.prefix%'
            - '%seed.separator%'
@@ -8,27 +8,27 @@ services:
             - [ setContainer, [ '@service_container' ] ]
 
     seed.seeds:
-        class: 'Soyuka\SeedBundle\Core\Seeds'
+        class: 'DsRestauration\SeedBundle\Core\Seeds'
         arguments:
            - '%seed.prefix%'
            - '%seed.separator%'
 
     seed.load_seeds_command:
-        class: 'Soyuka\SeedBundle\Command\LoadSeedsCommand'
+        class: 'DsRestauration\SeedBundle\Command\LoadSeedsCommand'
         parent: 'seed.seeds'
         tags: [ { name: 'console.command' } ]
 
     seed.unload_seeds_command:
-        class: 'Soyuka\SeedBundle\Command\UnloadSeedsCommand'
+        class: 'DsRestauration\SeedBundle\Command\UnloadSeedsCommand'
         parent: 'seed.seeds'
         tags: [ { name: 'console.command' } ]
 
     seed.extension.skip:
-        class: 'Soyuka\SeedBundle\Extensions\Skip'
+        class: 'DsRestauration\SeedBundle\Extensions\Skip'
         tags: [ {name: 'seed.extension', priority: 1 } ]
     seed.extension.order:
-        class: 'Soyuka\SeedBundle\Extensions\Order'
+        class: 'DsRestauration\SeedBundle\Extensions\Order'
         tags: [ {name: 'seed.extension', priority: 1 } ]
     seed.extension.matches:
-        class: 'Soyuka\SeedBundle\Extensions\Matches'
+        class: 'DsRestauration\SeedBundle\Extensions\Matches'
         tags: [ {name: 'seed.extension', priority: 0 } ]
