--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
                 <server name="KERNEL_DIR" value="./Tests/App" />
         </php>
     <testsuites>
-        <testsuite name="SoyukaSeedBundle test suite">
+        <testsuite name="DsRestaurationSeedBundle test suite">
             <directory suffix="Test.php">./Tests</directory>
         </testsuite>
     </testsuites>
