--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "symfony/framework-bundle": "^3.0",
-        "symfony/console": "^3.0",
-        "symfony/finder": "^3.0",
-        "doctrine/doctrine-bundle": "~1.6",
-        "doctrine/orm": "~2.5"
+        "symfony/framework-bundle": "~4.1.0",
+        "symfony/console": "~4.1.0",
+        "symfony/finder": "~4.1.0",
+        "doctrine/doctrine-bundle": "~1.9.1",
+        "doctrine/orm": "~2.6.2"
     },
     "autoload": {
       "psr-4": { "DsRestauration\\SeedBundle\\": "" }
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2"
+        "phpunit/phpunit": "~6.5.12"
     }
 }
