--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
-    seed.loader:
-        class: 'DsRestauration\SeedBundle\Core\Loader'
+    seed.registrar:
+        class: 'DsRestauration\SeedBundle\Core\Registrar'
         arguments:
            - '%seed.prefix%'
            - '%seed.separator%'
@@ -13,23 +13,29 @@ services:
         arguments:
            - '%seed.prefix%'
            - '%seed.separator%'
+        public: true
 
     seed.load_seeds_command:
         class: 'DsRestauration\SeedBundle\Command\LoadSeedsCommand'
         parent: 'seed.seeds'
         tags: [ { name: 'console.command' } ]
+        public: true
 
     seed.unload_seeds_command:
         class: 'DsRestauration\SeedBundle\Command\UnloadSeedsCommand'
         parent: 'seed.seeds'
         tags: [ { name: 'console.command' } ]
+        public: true
 
     seed.extension.skip:
         class: 'DsRestauration\SeedBundle\Extensions\Skip'
         tags: [ {name: 'seed.extension', priority: 1 } ]
+        public: true
     seed.extension.order:
         class: 'DsRestauration\SeedBundle\Extensions\Order'
         tags: [ {name: 'seed.extension', priority: 1 } ]
+        public: true
     seed.extension.matches:
         class: 'DsRestauration\SeedBundle\Extensions\Matches'
         tags: [ {name: 'seed.extension', priority: 0 } ]
+        public: true
